fixing javascript errors for github pages

--- a/edit.html
+++ b/edit.html
@@ -16,7 +16,7 @@
   <!--[if !IE]><!-->
   <script src="/javascript/undo.js"></script>
   <script src="/javascript/markdown-bar.js"></script>
-  <script src="javascript/marked/lib/marked.js"></script>
+  <script src="javascript/marked.js"></script>
   <script src="javascript/markdown-previewer.js"></script>
   <!--<![endif]-->
 
