changing links to relative paths

--- a/single-page-activity/edit.html
+++ b/single-page-activity/edit.html
@@ -11,16 +11,16 @@
   <title>Chime</title>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/javascript/markdown-hints.js"></script>
+  <script src="javascript/markdown-hints.js"></script>
 
   <!--[if !IE]><!-->
-  <script src="/javascript/undo.js"></script>
-  <script src="/javascript/markdown-bar.js"></script>
+  <script src="javascript/undo.js"></script>
+  <script src="javascript/markdown-bar.js"></script>
   <script src="javascript/marked.js"></script>
   <script src="javascript/markdown-previewer.js"></script>
   <!--<![endif]-->
 
-  <script src="/javascript/prototype.js"></script>
+  <script src="javascript/prototype.js"></script>
 </head>
 <body class="{% block body_class %}{% endblock %} col">
 
@@ -88,7 +88,7 @@ Property owners must clear snow from their sidewalks. After owners have had an a
         </div>
         <div class="col__flex previewer__content is-hidden">
           <div class="previewer__iframe-container">
-            <iframe src="/markdown-previewer/markdown-preview.html" class="markdown-previewer"></iframe>
+            <iframe src="markdown-previewer/markdown-preview.html" class="markdown-previewer"></iframe>
           </div>
         </div>
         <div class="col__flex previewer__history activity-overview__container is-hidden">
