--- a/content-ordering/browse-edit.html
+++ b/content-ordering/browse-edit.html
@@ -137,7 +137,7 @@
   </div>
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="/javascript/sortable.min.js"></script>
+<script src="javascript/sortable.min.js"></script>
 <script>
   $(document).ready(function() {
     $(".dir").each(function(index, dirList) {
